# nisl_360_dns

./: .gitignore  DGA.py  DGAbackto.py  README.md  afxr_processing.py  change_ipsrc.py  change_ts.py  dns_precessing.py  nsec_edu.ky.pcap
Caplen/: CMakeLists.txt  main.cpp
Checksum/: CMakeLists.txt  ReChecksum.cpp
Domain/: CMakeLists.txt  CustomDnsLayer.h  DnsLayerExposer.cpp  DomainMap.cpp  RawPacket.h  settings.json
IP/: CMakeLists.txt  IPMap.cpp  settings.json
MAC/: CMakeLists.txt  MACMap.cpp  oui.txt  settings.json
Timestamp/: Merge.py  merge.py  timefix.py
include/: layer.h
